--- a/SuperEconomicoApp.iOS/SuperEconomicoApp.iOS.csproj
+++ b/SuperEconomicoApp.iOS/SuperEconomicoApp.iOS.csproj
@@ -126,6 +126,9 @@
     <PackageReference Include="FirebaseDatabase.net">
       <Version>4.0.7</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Sharpnado.Shadows">
       <Version>1.2.0</Version>
     </PackageReference>
