--- a/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
+++ b/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
@@ -292,5 +292,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\gps.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\person.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\person1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\person2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
