--- a/SuperEconomicoApp.Android/Properties/AndroidManifest.xml
+++ b/SuperEconomicoApp.Android/Properties/AndroidManifest.xml
@@ -10,6 +10,25 @@
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS"
 				android:resource="@xml/file_paths"></meta-data>
 		</provider>
+
+		<!-- Notificaciones Push Inicio-->
+		<receiver
+			android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver"
+			android:exported="false" />
+		<receiver
+			android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
+			android:exported="true"
+			android:permission="com.google.android.c2dm.permission.SEND">
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+				<category android:name="${applicationId}" />
+			</intent-filter>
+		</receiver>
+		<meta-data android:name="com.google.firebase.messaging.default_notification_icon"
+				   android:resource="@android:drawable/ic_menu_save" />
+
+		<!-- Notificaciones Push Final -->
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
