--- a/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
+++ b/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
@@ -119,6 +119,7 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
+    <None Include="Resources\Info.plist" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\styles.xml" />
