para pasar de rama modificaciones de ejecucion nada de programacion

--- a/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
+++ b/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
@@ -101,9 +101,7 @@
     <AndroidAsset Include="Assets\FontAwesome6Brands-Regular-400.otf" />
     <AndroidAsset Include="Assets\FontAwesome6Free-Regular-400.otf" />
     <AndroidAsset Include="Assets\FontAwesome6Free-Solid-900.otf" />
-    <AndroidAsset Include="..\..\..\Desktop\imagenes\Fonts\materialdesignicons-webfont.ttf">
-      <Link>Assets\materialdesignicons-webfont.ttf</Link>
-    </AndroidAsset>
+    <AndroidAsset Include="Assets\materialdesignicons-webfont.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
