--- a/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
+++ b/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
@@ -317,5 +317,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\userPurple.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\pin_user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\supermercado.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\editar.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
