--- a/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
+++ b/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
@@ -325,5 +325,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\editar.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\supermarket.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\destination.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
