--- a/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
+++ b/SuperEconomicoApp.Android/SuperEconomicoApp.Android.csproj
@@ -74,9 +74,6 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
-    <PackageReference Include="Xamarin.Forms.GoogleMaps">
-      <Version>3.3.0</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Forms.PancakeView">
       <Version>2.3.0.759</Version>
     </PackageReference>
@@ -317,13 +314,13 @@
     <AndroidResource Include="Resources\drawable\userPurple.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\pin_user.png" />
+    <AndroidResource Include="Resources\drawable\basura.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidAsset Include="Assets\supermercado.png" />
+    <AndroidResource Include="Resources\drawable\siguiente.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\editar.png" />
+    <AndroidResource Include="Resources\drawable\flecha.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
