--- a/SuperEconomicoApp/SuperEconomicoApp.csproj
+++ b/SuperEconomicoApp/SuperEconomicoApp.csproj
@@ -76,6 +76,9 @@
     <EmbeddedResource Update="Views\ShowOrderDetailView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ShowOrderHistoryView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\TabbedOrder\ActiveOrdersView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
