Ordenes activas (Falta el detalle), historial de ordenes y su detalle listos, procediendo a agregar el seguimiento en segundo plano de la ubicacion

--- a/SuperEconomicoApp/SuperEconomicoApp.csproj
+++ b/SuperEconomicoApp/SuperEconomicoApp.csproj
@@ -62,6 +62,18 @@
     <EmbeddedResource Update="Views\AccountUserView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Delivery\ActiveOrdersDeliveryView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Delivery\OrdersDetailHistoryByDeliveryView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Delivery\OrdersHistoryDeliveryView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Delivery\TabbedDeliveryView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\EditUserViews.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
