--- a/SuperEconomicoApp.Android/Properties/AndroidManifest.xml
+++ b/SuperEconomicoApp.Android/Properties/AndroidManifest.xml
@@ -29,10 +29,35 @@
 				   android:resource="@android:drawable/ic_menu_save" />
 
 		<!-- Notificaciones Push Final -->
+		
+		<!--CUANDO LA APP SE REINICIA, SEGUNDO PLANO LOCALIZACION-->
+		<receiver android:name="com.locationservice.app.BootBroadcastReceiver" android:enabled="true" android:exported="true" 
+				  android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+			<intent-filter>
+				<action android:name="android.intent.action.BOOT_COMPLETED" />
+				<action android:name="android.intent.action.QUICKBOOT_POWERON" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</receiver>
+		<!--FIIIIN CUANDO LA APP SE REINICIA, SEGUNDO PLANO LOCALIZACION-->
+		
+		
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	
+	<!--SEGUIMIENTO DE LOCALIZACION EN SEGUNDO PLANO-->
+	<uses-feature android:name="android.hardware.location" android:required="false" />
+	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
+	<uses-feature android:name="android.hardware.location.network" android:required="false" />
+	<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+	<!--FIN SEGUIMIENTO DE LOCALIZACION 2DO PLANO-->
+	
+	
 </manifest>
