--- a/SuperEconomicoApp.Android/Properties/AndroidManifest.xml
+++ b/SuperEconomicoApp.Android/Properties/AndroidManifest.xml
@@ -26,20 +26,9 @@
 			</intent-filter>
 		</receiver>
 		<meta-data android:name="com.google.firebase.messaging.default_notification_icon"
-				   android:resource="@android:drawable/ic_menu_save" />
+				   android:resource="@android:drawable/ic_dialog_alert" />
 
 		<!-- Notificaciones Push Final -->
-		
-		<!--CUANDO LA APP SE REINICIA, SEGUNDO PLANO LOCALIZACION-->
-		<receiver android:name="com.locationservice.app.BootBroadcastReceiver" android:enabled="true" android:exported="true" 
-				  android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED" />
-				<action android:name="android.intent.action.QUICKBOOT_POWERON" />
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</receiver>
-		<!--FIIIIN CUANDO LA APP SE REINICIA, SEGUNDO PLANO LOCALIZACION-->
 		
 		
 	</application>
